--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,12 @@ description = "Turn Traditional Chinese script ot Simplified Chinese script and 
 repository = "https://github.com/sotch-pr35mac/character_converter"
 readme = "README.md"
 keywords = ["chinese", "simplified", "traditional", "convert", "hanzi"]
-categories = ["text-processing", "localization", "internationalization", "value-formatting"]
+categories = [
+  "text-processing",
+  "localization",
+  "internationalization",
+  "value-formatting",
+]
 license = "MIT"
 edition = "2021"
 
@@ -16,6 +21,7 @@ edition = "2021"
 bincode = "1.2.1"
 once_cell = "1.5.2"
 fst = "0.4"
+rusqlite = { version = "0.28.0", features = ["bundled"] }
 
 [build-dependencies]
 bincode = "1.2.1"
