--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,8 @@ edition = "2021"
 bincode = "1.2.1"
 once_cell = "1.5.2"
 fst = "0.4"
-rusqlite = { version = "0.28.0", features = ["bundled"] }
+# rusqlite = { version = "0.28.0", features = ["bundled"] }
+rusqlite = { version = "0.28.0" }
 
 [build-dependencies]
 bincode = "1.2.1"
