--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,12 @@ bincode = "1.2.1"
 once_cell = "1.5.2"
 fst = "0.4"
 # rusqlite = { version = "0.28.0", features = ["bundled"] }
-rusqlite = { version = "0.28.0" }
+# rusqlite = { version = "0.28.0" }
+
+# https://github.com/launchbadge/sqlx/blob/main/examples/sqlite/todos/Cargo.toml
+sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls"] }
+anyhow = { version = "1.0.65" }
+tokio = { version = "1.21.2", features = ["macros"] }
 
 [build-dependencies]
 bincode = "1.2.1"
